# FunnyHelloWorld

./: .gitignore  CMakeLists.txt  README.md  build_run.sh  main.cpp
helloworld/inc/: helloworld.h
helloworld/src/: helloworld.cpp
